fix spacing

--- a/less/layout/_main.less
+++ b/less/layout/_main.less
@@ -1,6 +1,7 @@
 .main {
   border-bottom: 1px solid @color-border;
   height: 100%;
+  padding: 2rem 0;
 }
 
 .section {
