--- a/less/modules/_fuzzy.less
+++ b/less/modules/_fuzzy.less
@@ -1,11 +1,7 @@
 .fuzzy {
-  margin: 2rem 1rem;
+  margin: 0 auto 2rem;
   position: relative;
   text-align: left;
-
-  @media (min-width: @media-small) {
-    margin: 3rem auto 2rem;
-  }
 
   &--input {
     -webkit-appearance: none;
